--- a/scripts/style.css
+++ b/scripts/style.css
@@ -118,7 +118,23 @@ button {
     font-weight: 300;
     transition: background-color 0.3s, color 0.3s;
 }
+input {
+    position : absolute;
+    width: 200px;
+    left: 50%;
+    background: none;
+    border: none;
+    font-family: Lato;
+    font-size: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: 300;
+    transition: background-color 0.3s, color 0.3s;
+    text-align: center;
+    transform: translateX(-50%);
 
+
+}
 button:hover { font-weight: 600; }
 button:hover i { margin-right: 20px; }
 
@@ -140,13 +156,23 @@ i {
 .btn-new { top: 45px;}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
+.new-score {top : 510px}
+.btn-change-score{ top: 550px }
 
-.dice {
+#dice-one {
     position: absolute;
     left: 50%;
     top: 178px;
     transform: translateX(-50%);
-    height: 100px;
+    height: 70px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
+#dice-two {
+    position: absolute;
+    left: 50%;
+    top: 270px;
+    transform: translateX(-50%);
+    height: 70px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
 
